--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
-    "xss": "^1.0.14"
+    "xss-clean": "^0.1.4"
   }
 }
